TestCases/Errors/Haversine/observations/sst/win_06_obs.spm
obs r14-c5 0.000589101620029455
obs r15-c5 9.08339229861747e-05
obs r13-c6 0.000694635392767501
obs r14-c6 0.000212963228881208
obs r15-c6 8.83726334129119e-05
obs r16-c6 1e-08
obs r13-c7 0.000209536633336579
obs r14-c7 0.000197982650309039
obs r15-c7 1e-08
obs r11-c8 0.00108695652173913
obs r12-c8 0.00108695652173913
obs r13-c8 0.000321901328094858
obs r14-c8 0.000150285542530809
obs r12-c9 0.00106382978723404
obs r13-c9 0.000309597523219814
obs r14-c9 0.000606612071580224
obs r15-c9 0.00134770889487871
obs r13-c10 1e-08
obs r14-c10 1e-08
obs r15-c10 0.000673854447439353
obs r5-c14 0.00841467519353753
obs r5-c15 0.00414593698175788
obs r7-c17 0.0416359447004608
obs r8-c17 0.0361290322580645
obs r8-c18 0.006
obs r9-c18 0.0252216748768473
obs r8-c19 0.0195043667924923
obs r9-c19 0.0158257222648361
obs r10-c19 0.01425
obs r11-c19 0.00716666666666667
obs r8-c20 0.0143868348366053
obs r9-c20 0.0203188560505171
obs r10-c20 0.0127707834822263
obs r11-c20 0.011
obs r10-c21 0.00615384615384615
error_value r14-c5 0.2
error_value r15-c5 0.2
error_value r13-c6 0.2
error_value r14-c6 0.2
error_value r15-c6 0.2
error_value r16-c6 0.2
error_value r13-c7 0.2
error_value r14-c7 0.2
error_value r15-c7 0.2
error_value r11-c8 0.2
error_value r12-c8 0.2
error_value r13-c8 0.2
error_value r14-c8 0.2
error_value r12-c9 0.2
error_value r13-c9 0.2
error_value r14-c9 0.2
error_value r15-c9 0.2
error_value r13-c10 0.2
error_value r14-c10 0.2
error_value r15-c10 0.2
error_value r5-c14 0.2
error_value r5-c15 0.2
error_value r7-c17 0.2
error_value r8-c17 0.2
error_value r8-c18 0.2
error_value r9-c18 0.2
error_value r8-c19 0.2
error_value r9-c19 0.2
error_value r10-c19 0.2
error_value r11-c19 0.2
error_value r8-c20 0.2
error_value r9-c20 0.2
error_value r10-c20 0.2
error_value r11-c20 0.2
error_value r10-c21 0.2
